src/test/ui/unboxed-closures/unboxed-closures-mutated-upvar-from-fn-closure.stderr
error[E0594]: cannot assign to `counter`, as it is a captured variable in a `Fn` closure
  --> $DIR/unboxed-closures-mutated-upvar-from-fn-closure.rs:11:9
   |
LL |   fn call<F>(f: F) where F : Fn() {
   |                 - change this to accept `FnMut` instead of `Fn`
...
LL |       call(|| {
   |  _____----_-
   | |     |
   | |     expects `Fn` instead of `FnMut`
LL | |         counter += 1;
   | |         ^^^^^^^^^^^^ cannot assign
LL | |
LL | |     });
   | |_____- in this closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
